--- a/gccocofo.html
+++ b/gccocofo.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">google.load("jquery", "1.2");</script>
     <meta http-equiv="Content-Type" content="text/javascript; charset=UTF-8">
   </head>
@@ -11,7 +11,7 @@
 
     function tekiyou(){
     var CURL = document.getElementById('C_URL').value;
-    var URL = "http://charasheet.vampire-blood.net/" + CURL +".js?callback=jsonp";
+    var URL = "https://charasheet.vampire-blood.net/" + CURL +".js?callback=jsonp";
     var script = document.createElement( 'script' );
     script.type = 'text/javascript';
     script.src = URL;
