--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>甲殻中枢派出所</title>
 </head>
 <body>
-    <a href="gccocofo.html">ココフォリアコピペ作成</a>
+    <div>
+        <a href="gccocofo.html">ココフォリアコピペ作成</a>
+    </div>
 </body>
 </html>
